--- a/css/style.css
+++ b/css/style.css
@@ -1,201 +1,544 @@
+@font-face {
+	font-family: "eurofurencelight";
+	src: url("../fonts/eurofurencelight.eot");
+	src: local("☺"), url("../fonts/eurofurencelight.woff") format("woff"),
+		url("../fonts/eurofurencelight.ttf") format("truetype"), url("../fonts/eurofurencelight.svg") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Cony";
+	src: url("../fonts/cony.eot");
+	src: local("☺"), url("../fonts/cony.woff") format("woff"), url("../fonts/cony.ttf") format("truetype"),
+		url("../fonts/cony.svg") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "blue_lagoon";
+	src: url("../fonts/blue_lagoon.eot");
+	src: local("☺"), url("../fonts/blue_lagoon.woff") format("woff"), url("../fonts/blue_lagoon.ttf") format("truetype"),
+		url("../fonts/blue_lagoon.svg") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
 * {
 	box-sizing: border-box;
 	text-decoration: none;
 }
 body {
-	font-family: "Poppins", sans-serif;
-	font-weight: 500;
-	color: #544837;
+	background: linear-gradient(to bottom, #d9ebee, #add8c7);
 	font-size: 16px;
+	font-family: "Calibri", sans-serif;
 	line-height: 26px;
+	margin: 0;
+	color: #0e3761;
 }
 
-button {
-	font-family: "Poppins", sans-serif;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 24px;
-	cursor: pointer;
-}
-
-.title {
-	color: #2f281e;
+.wrapper {
+	width: 100%;
+	min-height: 100%;
+	overflow: hidden;
 }
 
 .container {
 	max-width: 1124px;
 	margin: 0 auto;
+}
+
+.title {
+	text-align: center;
+	font-size: 32px;
+	margin: 10px;
+	text-transform: uppercase;
+	font-weight: 400;
+}
+
+.header__image {
+	display: flex;
+	justify-content: space-around;
+	max-height: 600px;
+	padding: 60px 10px 0px;
+}
+
+.header__image-item {
+	margin: 5px;
+}
+
+.header__img {
+	max-width: 2362px;
+	max-height: 600px;
+}
+
+.header__img {
+	display: block;
+	max-width: 1124px;
 	padding: 0 10px;
+	margin: 0 auto;
+}
+
+.header__img-tablet {
+	max-width: 300px;
+	max-height: 260px;
+}
+
+.header__image-item-img {
+}
+
+.header__img-services {
+	max-width: 410px;
+	max-height: 144px;
+}
+
+.header__image-item-text {
+	display: flex;
+	justify-content: space-between;
+	font-weight: 700;
+	letter-spacing: -0.21px;
+	font-size: 18px;
+	max-width: 460px;
+	padding: 5px 10px;
+	line-height: 30px;
+}
+
+.header__image-item-line {
+	max-width: 250px;
+	height: 5px;
+	margin: 10px auto;
+	background-color: #fff;
+}
+
+.header__image-text + .header__image-text {
+	margin-left: 50px;
+}
+
+.woman {
+	max-width: 180px;
+	max-height: 260px;
 }
 
 .header__inner {
+	background-color: rgba(255, 255, 255, 0.774);
+	background-size: auto;
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
-	height: 78px;
+	height: 35px;
+	position: fixed;
+	top: 0;
+	margin: auto;
+	left: 0;
+	right: 0;
+}
+
+.header__inner-container {
+	display: flex;
+	width: 1124px;
+	margin: 0 auto;
+	padding: 0 10px;
+	font-family: "eurofurencelight", sans-serif;
+	text-transform: uppercase;
+}
+.logo {
+	width: 135px;
+	line-height: 15px;
+	text-align: center;
+}
+.logo__link {
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 18px;
 }
 
 .menu {
 	margin-left: auto;
 }
+.menu li {
+	padding: 0 14px;
+}
 
 .menu__list {
 	display: flex;
+	justify-content: flex-end;
+	list-style: none;
 }
-
-.menu__list-item + .menu__list-item {
+.menu .menu__list-item + .menu__list-item {
 	margin-left: 24px;
 }
 
+.menu__list-item {
+}
+
 .menu__list-link {
-	color: #2f281e;
-	font-size: 14px;
+	min-width: 60px;
+	font-size: 22px;
 	line-height: 28px;
-	font-weight: 400;
-}
-.user-nav {
-	margin: 0 13px 0 52px;
+	font-weight: 500;
 }
 
-.user-nav__link {
-	font-weight: 600;
-	color: #173a56;
-	line-height: 24px;
-	padding: 11px 23px;
-	border: 1px solid #bcd0e5;
-	box-sizing: border-box;
-	border-radius: 4px;
+.header-photo {
+	width: 100%;
+	padding-bottom: 10px;
 }
 
-.user-nav__link + .user-nav__link {
-	margin-left: 14px;
-	border-color: transparent;
-	background-color: #ff9900;
-	color: #fff;
-}
-
-.top__inner {
-	padding: 133px 0 80px;
-	background-image: url("../images/top-bg.svg");
-	background-repeat: no-repeat;
-	background-position: bottom right;
-}
-.top__title {
-	font-size: 44px;
-	line-height: 54px;
-	font-weight: 700;
-	margin-bottom: 30px;
-	max-width: 518px;
-}
-.top__text {
-	font-size: 18px;
-	line-height: 28px;
-	margin-bottom: 45px;
-	font-weight: 400;
-	max-width: 460px;
-}
-.top__btn {
-	display: inline-block;
-	padding: 15px 41px 14px;
-	color: #fff;
-	background: #ff9900;
-	border-radius: 4px;
-	margin-right: 30px;
-	border: none;
-}
-.top__link {
-	display: inline-block;
-	font-weight: 600;
-	line-height: 24px;
-	text-decoration-line: underline;
-	color: #ff9900;
-	padding: 25px;
-	position: relative;
-}
-
-.top__link::before {
-	content: "";
-	position: absolute;
-	left: 0;
-	width: 17px;
-	height: 19px;
-	background-image: url("../images/play-icon.svg");
-}
-
-.tools {
-	padding-top: 110px;
-}
-.tools__title {
+.services {
+	background-color: rgba(154, 190, 253, 0.4);
 	text-align: center;
-	max-width: 539px;
-	margin: 0 auto 46px;
-	font-size: 36px;
-	line-height: 54px;
+	padding: 40px 0 20px;
+}
+
+.line {
+	width: 150px;
+	height: 5px;
+	margin: 15px auto;
+	background-color: #fff;
+}
+
+.services__row {
+	display: flex;
+	justify-content: space-around;
+	padding: 10px 20px;
+}
+
+.services__row-item {
+	padding: 10px 20px;
+}
+
+.services__item-container {
+	font-family: "eurofurencelight", sans-serif;
+	width: 330px;
+	height: 330px;
+	color: #fff;
 	font-weight: 700;
-	padding: 0 10px;
+	margin-bottom: 25px;
 }
-.tools__inner {
-	padding-bottom: 90px;
-	background-image: url("../images/tools-bg.svg");
-	background-repeat: no-repeat;
-	background-position: center bottom;
-	background-size: cover;
+
+.services__item-container-last {
+	width: 470px;
+	height: 330px;
 }
-.tools__items {
+
+.services__row-item-1 {
+	background: radial-gradient(rgba(148, 182, 255, 0.7), rgba(75, 156, 255, 0.7));
+}
+
+.services__row-item-2 {
+	background: radial-gradient(rgba(180, 253, 121, 0.8), rgba(132, 254, 141, 0.8));
+}
+
+.services__row-item-3 {
+	background: radial-gradient(rgba(255, 230, 184, 0.7), rgba(255, 205, 110, 0.7));
+}
+
+.services__row-item-4 {
+	background: radial-gradient(rgba(204, 186, 220, 0.5), rgba(186, 161, 210, 0.5));
+}
+
+.services__row-item-5 {
+	background: radial-gradient(rgba(173, 217, 213, 0.5), rgba(220, 137, 255, 0.5));
+}
+
+.services__row-item-6 {
+	background: radial-gradient(rgba(238, 199, 255, 0.5), rgba(220, 137, 255, 0.5));
+}
+
+.services__row-item-7 {
+	background: radial-gradient(rgba(143, 67, 206, 0.5), rgba(120, 0, 221, 0.5));
+}
+
+.services__row-last {
+	display: flex;
+	justify-content: center;
+}
+
+.services__row-title {
+	font-size: 22px;
+	letter-spacing: -0.75px;
+	font-weight: 400;
+}
+.services__row-img {
+	height: 210px;
+}
+.dream-art-img {
+	width: 250px;
+}
+
+.services__row-text {
+	font-family: "Cony", sans-serif;
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 60px;
-	padding: 8px 16px 0;
-}
-.tools__item {
-	width: 240px;
-}
-.tools__item-img {
-	margin-bottom: 30px;
-}
-.tools__item-title {
-	font-weight: 600;
-	font-size: 22px;
-	line-height: 33px;
-	margin-bottom: 13px;
-}
-.tools__link {
-	display: block;
-	color: #fff;
+	padding: 5px;
+	font-size: 14px;
 	font-weight: 700;
-	line-height: 24px;
-	background-color: #ff9900;
-	border-radius: 4px;
-	padding: 15px 32px 14px;
-	width: 175px;
-	margin: 0 auto;
+}
+.services__text-last {
+	justify-content: space-around;
 }
 
-.direction {
+.services__row-number {
+	font-family: "blue_lagoon", sans-serif;
+	font-size: 18px;
+	color: #fff;
 }
-.direction__item {
+
+.services__row-term {
+}
+
+.about {
+	font-family: "blue_lagoon", sans-serif;
+	font-size: 22px;
+	text-align: center;
+	padding: 40px 0 20px;
+}
+
+.about__text {
+	background-color: rgba(212, 236, 242, 0.6);
+	padding: 50px 150px 100px;
+}
+
+.about__text-list {
+	margin-top: 50px;
+}
+
+.about__line {
+	margin-bottom: 50px;
+}
+
+.contacts-form {
+	padding: 55px 60px;
+}
+
+.contacts-body {
 	display: flex;
-	justify-content: space-evenly;
-	padding-top: 120px;
+	justify-content: space-around;
 }
-.direction__item-content {
-	width: 486px;
+
+.contacts-body__item {
+	width: 400px;
 }
-.direction__item-pretitle {
-	line-height: 24px;
-	margin-bottom: 3px;
+
+.form {
+	max-width: 350px;
+	margin: 0px auto;
+	color: #fff;
+	padding: 30px 0;
 }
-.direction__item-title {
+
+.form * {
+	outline: none;
+}
+
+.form__body {
+	position: relative;
+}
+.form__body::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(51, 51, 51, 0.9) url("../img/loading.gif") center / 50px no-repeat;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.5s ease 0s;
+}
+.form__body._sending::after {
+	opacity: 1;
+	visibility: visible;
+}
+
+.form__title {
+	font-size: 40px;
 	font-weight: 700;
-	font-size: 36px;
-	line-height: 54px;
-	margin-bottom: 22px;
+	margin: 0px 0px 30px 0px;
 }
-.direction__item-text {
-	margin-bottom: 30px;
+.form__item {
+	margin: 0px 0px 10px 0px;
 }
-.direction__item-subtitle {
+
+::placeholder {
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.671);
+}
+
+.form__label {
+	margin-bottom: 5px;
+	font-size: 18px;
+}
+
+.form__input {
+	height: 50px;
+	padding: 0px 20px;
+	border-radius: 5px;
+	width: 100%;
+	font-size: 18px;
+	transition: all 0.5s ease 0s;
+}
+
+.form__input:focus {
+	box-shadow: 0 0 15px #7a956b;
+}
+.form__input._error {
+	box-shadow: 0 0 15px red;
+}
+
+textarea.form__input {
+	min-height: 100px;
+	resize: vertical;
+	padding: 20px;
+}
+
+.options {
+	padding: 10px 0px 0px 0px;
+}
+.options__item {
+	margin: 0px 0px 10px 0px;
+}
+.options__input {
+	display: none;
+}
+
+.options__input:checked + .options__label::after {
+	transform: scale(1);
+}
+
+.options__label {
+	display: inline-flex;
+	font-size: 16px;
+	line-height: 140%;
+	align-items: center;
+	position: relative;
+	cursor: pointer;
+}
+.options__label::before {
+	content: "";
+	align-self: flex-start;
+	flex: 0 0 24px;
+	height: 24px;
+	background-color: #fff;
+	border-radius: 50%;
+	margin: 0px 10px 0px 0px;
+}
+.options__label::after {
+	transition: transform 0.5s ease 0s;
+	content: "";
+	position: absolute;
+	top: 4px;
+	left: 4px;
+	width: 16px;
+	height: 16px;
+	background-color: #7a956b;
+	border-radius: 50%;
+	transform: scale(0);
+}
+
+.file {
+}
+
+.file__item {
+	position: relative;
+}
+.file__input {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	font-size: 0;
+	cursor: pointer;
+}
+.file__button {
+	display: inline-flex;
+	min-height: 40px;
+	border-radius: 30px;
+	justify-content: center;
+	align-items: center;
+	background-color: #77608d;
+	padding: 0px 20px;
+}
+.file__preview {
+	display: inline-block;
+	max-width: 100px;
+	padding: 10px 0px 0px 0px;
+}
+.file__preview img {
+	max-width: 100%;
+}
+
+.checkbox {
+}
+.checkbox._error .checkbox__label::before {
+	box-shadow: 0 0 15px red;
+}
+.checkbox__input {
+	display: none;
+}
+.checkbox__input:checked + .checkbox__label::after {
+	transform: scale(1);
+}
+
+.checkbox__label {
+	font-size: 18px;
+	line-height: 140%;
+	display: inline-flex;
+	align-items: center;
+	position: relative;
+	cursor: pointer;
+}
+
+.checkbox__label::before {
+	content: "";
+	align-self: flex-start;
+	flex: 0 0 24px;
+	height: 24px;
+	background-color: #fff;
+	border-radius: 4px;
+	margin: 0px 10px 0px 0px;
+}
+.checkbox__label::after {
+	transition: transform 0.5s ease 0s;
+	content: "";
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	top: 4px;
+	left: 4px;
+	background-color: #77608d;
+	border-radius: 4px;
+	transform: scale(0);
+}
+
+.checkbox__label a {
+	color: #7a956b;
+}
+
+.form__button {
+	width: 150px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 50px;
+	background-color: #77608d;
+	color: #fff;
+	font-size: 14px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 	font-weight: 700;
+	cursor: pointer;
+	border-radius: 20px;
+	box-shadow: 0 3px 0 #00000088;
+	transition: background-color 0.5s ease 0s;
+	position: relative;
+	top: 0;
 }
-.direction__item-img {
+.form__button:hover {
+	background-color: #5c4a6d;
+}
+.form__button:active {
+	top: 3px;
+	box-shadow: 0 2px 0 #00000088;
 }
