--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ a {
 	padding: 5px 10px;
 	line-height: 30px;
 	color: #797979;
+	white-space: nowrap;
 }
 
 .header__image-item-line {
@@ -669,7 +670,7 @@ textarea.form__input {
 	}
 }
 
-@media only screen and (max-width: 500px) {
+@media (min-width: 424) and (max-width: 500px) {
 	.header__image-item-text {
 		font-size: 14px;
 	}
