--- a/css/style.css
+++ b/css/style.css
@@ -406,15 +406,18 @@ a {
 
 .contacts-body {
 	display: flex;
-	justify-content: space-around;
+}
+
+.contacts-body__column {
+	margin-right: 30px;
+	padding-top: 50px;
 }
 
 .contacts-body__item {
-	width: 400px;
+	margin: 0 auto;
 }
 
 .contacts-column {
-	text-align: center;
 	padding-top: 20px;
 }
 
@@ -427,16 +430,16 @@ a {
 	width: 40px;
 }
 
-.contacts-body__item + .contacts-body__item {
+.contacts-body__item {
 	background-color: rgb(0, 0, 61, 0.82);
 	border-radius: 10px;
 }
 
 .form {
-	max-width: 350px;
+	max-width: 450px;
 	margin: 0px auto;
 	color: #fff;
-	padding: 30px 0;
+	padding: 30px 10px;
 }
 
 .form * {
@@ -647,6 +650,7 @@ textarea.form__input {
 	transition: background-color 0.5s ease 0s;
 	position: relative;
 	top: 0;
+	margin: 0 auto;
 }
 .form__button:hover {
 	background-color: #5c4a6d;
@@ -667,6 +671,12 @@ textarea.form__input {
 	.about__text {
 		font-size: 16px;
 		padding: 50px 30px;
+	}
+	.checkbox__label {
+		font-size: 12px;
+	}
+	.form__input {
+		height: 40px;
 	}
 }
 
@@ -724,38 +734,42 @@ textarea.form__input {
 	.services__row-number {
 		font-size: 14px;
 	}
-}
-@media only screen and (max-width: 565px) {
-	.about__text {
-		font-size: 12px;
-		padding: 30px 20px;
-	}
-	.about__text-list {
-		margin-top: 20px;
-	}
-	.title {
-		font-size: 22px;
-	}
-}
 
-@media (max-width: 892px) {
-	.container {
-		max-width: 750px;
-	}
-}
-@media (max-width: 767.98px) {
-	.container {
-		max-width: none;
-		padding: 0 10px;
-	}
-	.contacts-body__item {
-		width: 300px;
-	}
-	.form__item {
-		margin: 10px auto;
-		width: 270px;
-	}
 	.form__button {
-		margin: 0 auto;
+		width: 100px;
+		height: 35px;
+		font-size: 10px;
+	}
+	@media only screen and (max-width: 565px) {
+		.about__text {
+			font-size: 12px;
+			padding: 30px 20px;
+		}
+		.about__text-list {
+			margin-top: 20px;
+		}
+		.title {
+			font-size: 22px;
+		}
+	}
+
+	@media (max-width: 892px) {
+		.container {
+			max-width: 750px;
+		}
+	}
+	@media (max-width: 767.98px) {
+		.container {
+			max-width: none;
+			padding: 0 10px;
+		}
+
+		.form__item {
+			margin: 10px auto;
+			width: 270px;
+		}
+		.form__button {
+			margin: 0 auto;
+		}
 	}
 }
